# fastc

./: README.md
fastc-parser/: Main.hs  fastc-parser.cabal  stack.yaml
fastc-parser/example-files/invalid/: IdentifierGreaterThan.fastc  IdentifierLeftBracket.fastc  IdentifierRightBracket.fastc  IdentifierWithNoSequence.fastc  MbesaMissing.fastc
fastc-parser/example-files/valid/: ambiguity-group-multi-line.fastc  comment-ambiguity-group.fastc  comment-end-of-file.fastc  comment-mulitline.fastc  comment-nested.fastc  example-gene-synteny.fastc  example-linguistic.fastc  identifier-parens.fastc  traditional.fastc
fastc-parser/src/File/Format/Fastc/: Internal.hs  Parser.hs
fastc-parser/test/: FileTests.hs
tex/: big-refs-3.bib  fastc.tex
