cabal-version:      2.2
category:           Parser
build-type:         Simple

name:               fastc-parser
version:            1.0.0

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Parsers for the FASTC file format definition

description:        Defines file parser for FASTC files as described in the
                    acompanying paper. Included is a post-processing module to
                    interpret synteny annotations in the parse result.


common ghc-settings

  default-language: Haskell2010

  ghc-options:      -O2
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind

  other-extensions: MonadFailDesugaring


library

  import:           ghc-settings

  build-depends:    base               >=4.10
                  , megaparsec         >=6.4.0
                  , parser-combinators >=0.2.0
                  , vector

  hs-source-dirs:   src

  exposed-modules:  File.Format.Fastc

  other-modules:    File.Format.Fastc.Internal
                    File.Format.Fastc.Parser


executable fastc

  import:           ghc-settings

  main-is:          Main.hs

  build-depends:    base               >=4.10
                  , fastc-parser
                  , megaparsec         >=6.4.0


--Test-Suite unit-tests

--  import:           ghc-settings

--  type:             exitcode-stdio-1.0

--  main-is:          TestSuite.hs

--  build-depends:    base               >=4.8
--                  , case-insensitive
--                  -- >=0.5.8 Required for Data.Map.restrictKeys
--                 , containers         >=0.5.8
--                  , dlist
--                  , either
--                  , keys
--                  , megaparsec         >=6.0.0
--                  , parser-combinators >=0.2.0
--                  , safe
--                  , scientific
--                  , tasty
--                  , tasty-hunit
--                  , tasty-quickcheck
--                  , vector

--  hs-source-dirs:   src, test

--  ghc-options:      -threaded

--  other-modules:    File.Format.Fastc.Internal
--                    File.Format.Fastc.Parser
--                    File.Format.Fastc.Test


--Executable file-tests

--  main-is:          FileTests.hs

--  build-depends:    base               >=4.8
--                  -- >=0.5.8 Required for Data.Map.restrictKeys
--                  , containers         >=0.5.8
--                  , directory
--                  , fastc-parser
--                  , megaparsec         >=6.0.0
--                  , tasty
--                  , tasty-hunit

--  hs-source-dirs:   test

--  ghc-options:      -threaded

--  other-modules:    Test.Custom.Parse
--                    TestSuite.GeneratedTests
--                    TestSuite.GeneratedTests.Fastc
